--- a/UFO- level 1/index.html
+++ b/UFO- level 1/index.html
@@ -39,6 +39,27 @@
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
+
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="Enter City">
+                      </li>
+
+                      <li class="filter list-group-item">
+                        <label for="state">Enter a State</label>
+                        <input class="form-control" id="state" type="text" placeholder="Enter State">
+                      </li>
+
+                      <li class="filter list-group-item">
+                        <label for="country">Enter a Country</label>
+                        <input class="form-control" id="country" type="text" placeholder="Enter Country">
+                      </li>
+
+                      <li class="filter list-group-item">
+                        <label for="shape">Enter a Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="Enter Shape">
+                      </li>
+
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default" >Filter Table</button>
